--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
     "dotenv": "^16.4.5",
