--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "hbs": "^4.2.0",
+    "helmet": "^7.1.0",
+    "https": "^1.0.0",
     "mongoose": "^8.6.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pm2": "^5.4.2"
   },
   "devDependencies": {
