--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     env:
       CI: true
-      MONGO_URL: mongodb://localhost:27017/test
+      MONGO_URL: mongodb://localhost/db
 
     runs-on: ubuntu-latest
 
@@ -20,7 +20,7 @@ jobs:
       matrix:
         node-version: [20.x, 22.x]
         mongodb-version: ['6.0', '7.0', '8.0']
-        
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
