--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^8.6.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "pm2": "^5.4.2"
+    "pm2": "^5.4.2",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
