--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/server.js",
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "test": "jest",
+    "test": "jest --detectOpenHandles --forceExit",
     "cluster": "pm2 start ./src/server.js -i 0"
   },
   "author": "",
