--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x, 22.x]
-        mongodb-version: ['6.0', '7.0']
+        mongodb-version: ['7.0']
 
     steps:
     - name: Checkout repository
