--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -13,6 +13,8 @@ jobs:
     env:
       CI: true
       MONGO_URL: mongodb://localhost/db
+      CLIENT_ID: 123456789
+      CLIENT_SECRET: 123456789
 
     runs-on: ubuntu-latest
 
