--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "./src/server.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start": "node ./src/server.js",
+    "watch": "nodemon ./src/server.js",
     "test": "jest --detectOpenHandles --forceExit",
     "cluster": "pm2 start ./src/server.js -i 0"
   },
